@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-11T08:31:29Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2022-10-11T16:33:53Z",
+  "count" : 10,
+  "count_minmax" : [ 1, 10 ],
+  "count_decinc" : [ -0, +10 ],
+  "uniques" : 7,
+  "uniques_minmax" : [ 1, 7 ],
+  "uniques_decinc" : [ -0, +7 ]
 }
