@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-11T08:31:29Z",
+  "timestamp" : "2022-10-11T16:33:53Z",
   "count_outdated" : 2486,
   "uniques_outdated" : 635,
-  "count" : 2508,
-  "uniques" : 648,
+  "count" : 2517,
+  "uniques" : 654,
   "clones" : [
     {
       "timestamp": "2022-09-27T00:00:00Z",
@@ -70,10 +70,10 @@
     },
     {
       "timestamp": "2022-10-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 10,
+      "count_minmax": [ 1, 10 ],
+      "uniques": 7,
+      "uniques_minmax": [ 1, 7 ]
     }
   ]
 }
