@@ -1,6 +1,6 @@
 {
-  "count": 22,
-  "uniques": 5,
+  "count": 31,
+  "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-09-27T00:00:00Z",
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-10-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 10,
+      "uniques": 7
     }
   ]
 }
