@@ -1,3 +1,11 @@
+2022-10-11T16:33:53Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3228599218
+* notice: last 14d: unq all: 11 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 635 2486 / 648 2508
+* notice: next accum: outdated-unq outdated-all / unq all: 635 2486 / 654 2517
+* notice: prev exec diff / last date diff / accum: unq all: +6 +9 -0 -0 / +7 +10 -0 -0 / 7 10
+* notice: removed / changed dates: [] / [2022-10-11]
+
 2022-10-11T08:31:29Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3225305616
 * notice: last 14d: unq all: 5 22
